test_regress/t/t_class_null_bad.out
%Error: t/t_class_null_bad.v:19: Null pointer dereferenced
Aborting...
